--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Saurabh Nemade",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "node-notifier": "^10.0.0"
+  }
 }
